Causeview Package Complete/ant script/retrieveUnpackaged/objects/Package__c.object
<CustomObject>
    <description>Causeview - Codes to define direct mail segmentations</description>
    <fields>
        <fullName>Appeal__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Related appeal</description>
        <label>Appeal</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>Packages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Package category classification</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Package Category 1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default_Gift_Amount__c</fullName>
        <description>Default gift amount for package</description>
        <label>Default Gift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of package code or segmentation</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Package end date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes for package</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_Solicited__c</fullName>
        <description>Number of constituents that were solicitied</description>
        <label>Number Solicited</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Code for package</description>
        <externalId>true</externalId>
        <label>Package Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Sequence of package drop</description>
        <label>Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Package start date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_Name__c</fullName>
        <label>Unique Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Package</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Package_Code__c</columns>
        <columns>Unique_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Package Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>